--- a/A_bulletin_board_website_cameramarket/style/header.css
+++ b/A_bulletin_board_website_cameramarket/style/header.css
@@ -1,8 +1,10 @@
-<<<<<<< HEAD
      
+body {
+    margin: 0;
+}
 .header {
     
-    background: #222222 url(/copying_bulletin_board_website/header_background.jpg) no-repeat top right;
+    background: #222222 url(/A_bulletin_board_website_cameramarket/style/image/header_background.jpg) no-repeat top right;
     display: flex;
     width: 100%;
     height: 147px;
@@ -10,10 +12,10 @@
 #header_wrapper {
     height: 80px;
     display: flex;
-    
+    width: 700px;
     justify-content: center;
     margin: 0 auto;
-    
+    align-items: center;
 }   
 
     
@@ -29,9 +31,8 @@
     margin-left: 70px;
     margin-right: 35px;
     max-width: 500px;
-    display: inline-block;
-    overflow: hidden;
-    white-space: nowrap;
+    display: flex;
+    
 }
 
 .search-bar {
@@ -43,11 +44,12 @@
     border-radius: 2px;
     box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
     min-width: 60px;
-    margin-top: 32px;
+    margin-top: 26px;
     
 }
 .icon-search{
-    display: inline-block;
+    padding-top: 8px;
+    height: 20px;
     
 
 }
@@ -58,8 +60,10 @@
     border-width: 1px;
     border-style: solid;
     border-color: rgb(192, 192, 192);
-    margin-left: -3px;
-    display: inline-block;
+    margin-left: -1px;
+    margin-top: 26px;
+    display: flex; 
+    
     
     
 }
@@ -96,102 +100,3 @@
     
 }
 
-=======
-     
-.header {
-    
-    background: #222222 url(/copying_bulletin_board_website/header_background.jpg) no-repeat top right;
-    display: flex;
-    width: 100%;
-    height: 147px;
-}   
-#header_wrapper {
-    height: 80px;
-    display: flex;
-    
-    justify-content: center;
-    margin: 0 auto;
-    
-}   
-
-    
-.left-section {
-    
-    padding-left: 3px;
-    padding-top: 3px;
-    
-}
-
-.middle-section {
-    flex: 1;
-    margin-left: 70px;
-    margin-right: 35px;
-    max-width: 500px;
-    display: inline-block;
-    overflow: hidden;
-    white-space: nowrap;
-}
-
-.search-bar {
-    
-    height: 36px;
-    padding-left: 10px;
-    font-size: 16px;
-    border: 1px solid rgb(192, 192, 192);
-    border-radius: 2px;
-    box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
-    min-width: 60px;
-    margin-top: 32px;
-    
-}
-.icon-search{
-    display: inline-block;
-    
-
-}
-.search-btn {
-    height: 40px;
-    width: 36px;
-    background-color: rgb(240, 240, 240);
-    border-width: 1px;
-    border-style: solid;
-    border-color: rgb(192, 192, 192);
-    margin-left: -3px;
-    display: inline-block;
-    
-    
-}
-
-.right-section {
-
-    flex-shrink: 0;
-    margin: 18px auto 0px 100px;
-    color: white;
-    
-   
-}
-.membership-id {
-    
-}
-
-.id-box {
-    width: 100px;
-}
-
-.password {
-    width: 100px;
-}
-
-.login-btn {
-    width: 70px;
-    
-    
-}
-
-.new-id-btn {
-    width: 110px;
-    
-    
-}
-
->>>>>>> e6c91d4039c4f9ba74953cda9d832050ae1b5d22
