--- a/A_bulletin_board_website_cameramarket/style/header.css
+++ b/A_bulletin_board_website_cameramarket/style/header.css
@@ -7,48 +7,55 @@ body {
     background: #222222 url(/A_bulletin_board_website_cameramarket/style/image/header_background.jpg) no-repeat top right;
     display: flex;
     width: 100%;
-    height: 147px;
+    height: 149px;
+    
+    
+    
 }   
 #header_wrapper {
     height: 80px;
     display: flex;
-    width: 700px;
-    justify-content: center;
     margin: 0 auto;
-    align-items: center;
+    
 }   
 
     
 .left-section {
+    padding-left: 5px;
+    padding-top: 5px;
+    margin-right: 150px;
     
-    padding-left: 3px;
-    padding-top: 3px;
+}
+.home_logo {
     
 }
 
 .middle-section {
-    flex: 1;
-    margin-left: 70px;
-    margin-right: 35px;
-    max-width: 500px;
     display: flex;
+    width: 300px;
+    min-width: 103px;
     
 }
-
-.search-bar {
+@media screen and (max-width: 900px) {
+    .middle-section {
+        display: none;
+    }
     
+}
+.search-bar {
+    flex: 1;
     height: 36px;
     padding-left: 10px;
     font-size: 16px;
     border: 1px solid rgb(192, 192, 192);
     border-radius: 2px;
     box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
-    min-width: 60px;
-    margin-top: 26px;
-    
+    width: 0;
+    margin: 26px auto;
+        
 }
+
 .icon-search{
-    padding-top: 8px;
     height: 20px;
     
 
@@ -62,19 +69,24 @@ body {
     border-color: rgb(192, 192, 192);
     margin-left: -1px;
     margin-top: 26px;
-    display: flex; 
+    
+    
     
     
     
 }
 
 .right-section {
-
+    
     flex-shrink: 0;
     margin: 18px auto 0px 100px;
     color: white;
+}
+@media screen and (max-width: 800px) {
+    .right-section {
+        display: none;
+    }
     
-   
 }
 .membership-id {
     
