--- a/A_bulletin_board_website_cameramarket/style/main_content.css
+++ b/A_bulletin_board_website_cameramarket/style/main_content.css
@@ -1,27 +1,90 @@
-#contents_wrapper {
+#main_content_ads_wrapper {
+    display: flex;
+    width: 100%;
+    
+    justify-content: center;
+    align-items: start;
+    
 
-    margin: 67px auto;
-    min-height: 500px;
-    height: 890px;
-    background-color: beige;
-    padding-bottom: 35px;
-    display: block;
-    max-width: 750px;
-
+    
 }
+
+#main_content {
+    
+    background-color: whitesmoke;
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: clip;
+    
+    
+}
+
+.greeting_new_user {
+    max-width: 800px;
+    background-color: bisque;
+    
+}
+h1 {
+    font-size: 36px;
+    font-weight: normal;
+    letter-spacing: -1px;
+    line-height: normal;
+    margin-top: 10px;
+    padding: 0 0 0 0px;
+    color: red;
+    text-align: left;
+}
+.main_content_grid {
+    max-width: 1280px;
+    margin-top: 25px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    column-gap: 20px;
+    row-gap: 40px;
+    padding-left: 8px;
+}
+.thumbnails {
+    width: 240px;
+    height: 240px;
+    object-fit: cover;
+    object-position: center;
+    background-color: #bbbbbb;
+    
+}
+.photo_preview {
+    width: 100%;
+    
+}
+
+.sidebar {
+    width: 300px;
+    min-width: 0;
+    background-color: rgb(82, 16, 236);
+    display: flex;
+    margin-top: 50px;
+    height: 1280px;
+    font-size: 30px;
+    font-weight: bold;
+    justify-content: center;
+    
+}
+@media screen and (max-width: 1100px) {
+    .sidebar {
+        display: none;    
+    }
+}
+    
+
 
 .heirarchial_select_clear_block {
     width: 200px;
     height: 100px;
     padding-left: 0px;
 }
-#contents_create_ads {
-    margin: 0 auto;
-    display: block;
-    padding: 20px 0 0 0px;
-    border-top: 1px solid;
-    border-color: #bbbbbb;
-}
+
 
 #edit-taxonomy-9-hierarchial-select-selects-0 {
     font-size: 16px;
@@ -62,41 +125,39 @@
 
 #save_preview_inputs {
     
-    margin: 530px 0;
+    margin: 0 0;
     border-bottom: 1px solid #bbbbbb;
     height: 50px;
 }
 #footer-bottom_contents {
-    
-    background-color: #2C2D32;
     display: block;
+    background-color: #2C2D32;
     height: 300px;
-    margin-top: -100px;
+    width: 100%;
+    
+    
     
 }
 
 
 #block_block_6 {
     
-    margin: 0 auto;
     background-color: none;
     height: 250px;
-    
     padding-top: 10px;
-    
+    margin:0 auto;
     width: 760px;
 
 }
 #block_block_6 ul {
     text-decoration: none;
     text-transform: uppercase;
-    
     font-family: 'Times New Roman', Times, serif;
-    
     font-size: 15px;
     font-weight: bold;
     text-align: left;
     list-style: none;
+    
 }
 
 #block_block_6 ul li {
